compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__moving_type_without_constructors_across_modules_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

+ wobble

== wibble ==
- pub type Wibble
+ pub type Wibble = Wibble
