compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__removing_constant_annotation_to_change_concrete_type_to_generic_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub const list: List(Int)
+ pub const list: List(a)
