compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__removing_constructor_deprecation_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub type Wibble {
-   @deprecated(...)
-   Wibble
-   Wobble
- }
+ pub type Wibble {
+   Wibble
+   Wobble
+ }
