compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__removing_constructor_from_public_custom_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble {
-   Wibble
-   Wobble
- }
+ pub type Wibble {
+   Wibble
+ }
