compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__removing_label_from_opaque_constructor_field_when_turning_to_non_opaque_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub type Wibble
+ pub type Wibble {
+   Wibble(Int, String)
+ }
