compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__removing_target_support_from_constant_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
The target support for wobble has changed:
- Erlang, JavaScript
+ Erlang
